2005-12-19  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: Select appropriate fragments for PowerPC/AIX.
	* configure: Regenerate.

	* Makefile.def (flags_to_pass): Add ADAFLAGS, BOOT_ADAFLAGS,
	BOOT_CFLAGS, BOOT_LDFLAGS.
	* Makefile.tpl (POSTSTAGE1_FLAGS_TO_PASS): Handle BOOT_ADAFLAGS,
	BOOT_CFLAGS, BOOT_LDFLAGS.
	(TARGET_FLAGS_TO_PASS): Handle ADAFLAGS_FOR_TARGET.
	(stage[+id+]-bubble): Pass flags recursively to the comparison target.
	(stage): Fail if we cannot complete the work.
	* Makefile.in: Regenerate.

2005-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.NEWLIB: Update copyright year for default
	copyright.

2005-12-15  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.tpl (all, do-[+make_target+], do-check, install,
	install-host-nogcc): Don't invoke $(stage) at the end.
	* Makefile.in: Regenerate.

2005-12-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: Flip the top-level bootstrap switch.
	* configure: Regenerate.

	Merge from gcc:

	2005-12-14  Daniel Jacobowitz  <dan@codesourcery.com>

        * Makefile.tpl: Throughout the file, use : $(MAKE) along with
        $(stage) and $(unstage).
        (EXTRA_TARGET_FLAGS): Correct double-quoting.
        (all): Remove stray semicolon.
        (local-distclean): Don't handle multilib.tmp and multilib.out.
        (install.all): Set $s for consistency.
        (configure-[+prefix+][+module+]): Instead of [+deps+], handle
        check_multilibs setting.  Always make the install directory.
        (configure-stage[+id+]-[+prefix+][+module+]): Likewise.
        Correct @if/@endif.
        (all-stage[+id+]-[+prefix+][+module+]): Correct @if/@endif.
        ($(TARGET_SUBDIR)/[+module+]/multilib.out): Remove.
        (stage[+id+]-start, stage[+id+]-end): Stage $(TARGET_SUBDIR).
        (multilib.out): Remove.
        * Makefile.in: Regenerated.

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* config.sub: Replace ms1 arch with mt.  Allow ms1 as alias.